# AprilTagWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  arm64v8.dockerfile  camera.param  docker-compose.yml  dockerFlaskEKF.py  main.cpp  multi-arch-manifest.yaml  requirements.txt  setup.py
AprilTagWrapper/: Core.py  FilterPool.py  __init__.py  camera.py  tracker.py
KF/: ekf_interface.cpp  filter_interface.cpp
PoseEKF/: PoseEKFWrapper.py  __init__.py  install.sh
april_tag_wrapper/: april_tag_wrapper.cpp  april_tag_wrapper.h
example/: cppEKFTEST.py  dockerFlaskEKF.py  flaskClientTest.py  flaskServerTest.py  simpleEKFTest.py  simpleWorldCoordEKFTest.py  tagCoordinateServer.py  worldCoordinateTest.py
examples/: CMakeLists.txt  example_april_tag_ekf.cpp  example_python_apriltag_ekf.cpp
examples/april_tag_wrapper/: april_tag_wrapper.cpp  april_tag_wrapper.h
hooks/: post_push
include/robot_localization/: filter_base.h  filter_interface.h
param/: ekf_param.yaml
utility/: calibrate_camera.py  video_calibrate.py  viz_world_coordinates.py
